[workspace]
members = [".", "babble-macros", "experiments"]
default-members = [".", "babble-macros"]

[package]
name = "babble"
description = "improved library learning"
version = "0.1.0"
authors = ["David Cao <david@cao.sh>", "Rose Kunkel <rose@rosekunkel.me>"]
repository = "https://github.com/dcao/babble"
license = "MIT"
keywords = ["e-graphs", "program-synthesis"]
categories = ["command-line-utilities"]
edition = "2018"

[workspace.dependencies]
egg = { git = "https://github.com/egraphs-good/egg.git", features = ["serde-1"] }
itertools = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9"
log = "0.4"
anyhow = "1"
thiserror = "1"
babble-macros = { path = "babble-macros" }
nom = "7"

[dependencies]
egg.workspace = true
babble-macros.workspace = true
itertools.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
anyhow.workspace = true
nom.workspace = true
grb = { version = "1.3.0", optional = true }
smallvec = "1.8"
memory-stats = "1.0"

[profile.release]
debug = true
